--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+    <!-------------navbar---------------->
     <nav>
         <ul>
             <li class="logo-text">
@@ -35,6 +37,7 @@
             </li>
         </ul>
     </nav>
+    <!-------------Header-------------->
     <header id="home">
         <div>
             <p>I BELIEVE IN </p>
@@ -42,6 +45,7 @@
         </div>
     </header>
 
+    <!-- -----------bio --------- -->
     <section id="bio">
         <img src="assets/Screenshot_20190929-121446_WhatsApp.jpg" alt="avtar">
         <article>
@@ -63,6 +67,7 @@
         </article>
     </section>
 
+    <!-------------portfolio------------->
     <section id="portfolio">
         <h3>PORTFOLIO</h3>
         <p>Some of my best projects so far</p>
@@ -85,7 +90,7 @@
             </article>
         </div>
     </section>
-
+<!------------Skills--------------->
     <section id="skills">
         <h2>SKILLS</h2>
         <div id="skills-container">
@@ -119,6 +124,7 @@
         </div>
     </section>
 
+    <!----------------footer----------------->
     <footer id="contact">
         <form action="#">
         <h3>CONTACT</h3>
