this is first resume

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProGrad</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li class="logo-text">
-                ProGrad
+                Nisha
             </li>
             <li>
                 <ul>
@@ -75,17 +75,17 @@
         <div>
             <article>
                 <img src="http://i1.faceprep.in/ProGrad/Coding-icon.svg" alt="icon">
-                <h4>PERSONAL BLOG</h4>
-                <p>A blog where i pen my own thoughts on programming</p>
+                <h4>Guess The Number</h4>
+                <p>A number guessing game. </p>
             </article>
             <article>
                 <img src="http://i1.faceprep.in/ProGrad/Coding-icon.svg" alt="icon">
-                <h4>TIC TAC TOE</h4>
-                <p>Complete Tic Tac Toe game along with GUI using Java</p>
+                <h4>Wheather App</h4>
+                <p>A weather app using api</p>
             </article>
             <article>
                 <img src="http://i1.faceprep.in/ProGrad/Coding-icon.svg" alt="icon">
-                <h4>TIME TABLE GENERATOR</h4>
+                <h4>Npm clone</h4>
                 <p>A web applicaction for automatic time table generation.</p>
             </article>
         </div>
@@ -107,7 +107,10 @@
                     <li><progress id="file" value="65" max="100"> </progress></li>
 
                     <li>ANGULAR</li>
-                    <li><progress id="file" value="32" max="100"> </progress></li>
+                    <li><progress id="file" value="72" max="100"> </progress></li>
+                    
+                    <li>MONGODB</li>
+                    <li><progress id="file" value="62" max="100"> </progress></li>
                 </ul>
             </div>
 
